<resources>
    <string name="app_name">作業九:林敬勛</string>
    <string name="items">項目:</string>
    <string-array name="itemsList">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
    <string name="itemList_prompt">Select purchased meal</string>

    <string name="dataTxt">日期:</string>
    <string name="costTxt">金額:</string>
    <string name="inputBtn">輸入</string>
    <string name="recordBtn">紀錄</string>

    <string name="about">關於這個程式...</string>
    <string name="finish">結束</string>
    <string name="music">背景音樂</string>
    <string name="playMusic">播放背景音樂</string>
    <string name="stopPlaying">停止播放背景音樂</string>
</resources>
