<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/act_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/itemTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/items"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/itemSpn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:entries="@array/itemsList"
            android:prompt="@string/itemList_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dataTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dataTxt"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dataOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp" />
    </LinearLayout>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="true"
        android:datePickerMode="spinner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/costTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/costTxt"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/costEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/inputBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inputBtn"
            android:textSize="20sp" />

        <Button
            android:id="@+id/recordBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recordBtn"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>